--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
 <html>
-  <head><title> DT Project</title></head>
-  <body>
-    <p> this is Izak's website </p>
-  </body> 
+  <h1>Yttriumn<h2>
   
 </html> 
