--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head><title>Yttriumn</title></head>
   <body>
+    <h1>Yttrium<h2>
         
         
   <p>We are creating a website on chemistry</p>
