--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <head><title>Yttriumn</title></head>
+  <head><title>Chemistry Website</title></head>
   <body>
     <h1>Yttrium<h2>
         
