--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <p>We are creating a website on chemistry, in groups we got given a element to make a website on.
       The element that we got given is Yttrium.</p>
       
-  <p><a href="Aluminium<br>
+      <p><a href="Aluminium.html">Aluminium</a><br>
     Arsenic<br>
     Chlorine<br>
     Gold<br>
