--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <p>We are creating a website on chemistry, in groups we got given a element to make a website on.
       The element that we got given is Yttrium.</p>
       
-      <p><a href="IzakEc.github.io/Elements/Aluminium.html">Aluminium</a></p><br>
+      <p><a href="Elements/Aluminium.html">Aluminium</a></p><br>
     Arsenic<br>
     Chlorine<br>
     Gold<br>
