--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <p>We are creating a website on chemistry, in groups we got given a element to make a website on.
       The element that we got given is Yttrium.</p>
       
+     <p><a href="CSS/Style.html">Style</a>
+      
       <p><a href="Elements/Aluminium.html">Aluminium</a><br>
          <a href="Elements/Arsenic.html">Arsenic</a><br>
          <a href="Elements/Chlorine.html">Chlorine</a><br>
