--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <p>We are creating a website on chemistry, in groups we got given a element to make a website on.
       The element that we got given is Yttrium.</p>
       
-      <p><link rel="stylesheet" type="test/CSS" href="style.css"></p>
+      <p><link rel="CSS" type="text/CSS" href="style.css"></p>
       
       <p><a href="Elements/Aluminium.html">Aluminium</a><br>
          <a href="Elements/Arsenic.html">Arsenic</a><br>
