--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
          <a href="Elements/Krypton.html">Krypton</a><br>
          <a href="Elements/Yttrium">Yttrium</a><br></p>
     
-    <img src ../images/yttrium1>
+    <img src ../images/yttrium1.jpg>
       
   </body>
    
