--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
          <li><a href="Elements/Sulfur.html">Sulfer</a></li>
          <li><a href="Elements/Titanium.html">Titanium</a></li>
          <li><a href="Elements/Krypton.html">Krypton</a></li>
-         <li><a href="Elements/Yttrium">Yttrium</a><br></ul></li>
+         <li><a href="Elements/Yttrium">Yttrium</a><br></li>
+      </ul>
     
     <img src ../images/yttrium1.jpg>
       
