--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       The element that we got given is Yttrium.</p>
     
       
-      <p><ul>
+      <p><ul style="list-style-type:square">
          <li><a href="Elements/Aluminium.html">Aluminium</a></li>
          <li><a href="Elements/Arsenic.html">Arsenic</a></li>
          <li><a href="Elements/Chlorine.html">Chlorine</a></li>
