--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
          <li><a href="Elements/Yttrium">Yttrium</a><br></li>
       </ul>
     
-    <img src="yttrium1.jpg">
+    <img src=./images/"yttrium1.jpg">
       
   </body>
    
