--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
          <li><a href="Elements/Yttrium">Yttrium</a><br></li>
       </ul>
     
-    <img src="/images/yttrium1.jpg">
+    <img src="../images/yttrium1.jpg">
       
   </body>
    
