--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head><title>Chemistry Website</title></head>
   <body>
     <h1>Chemistry Homepage<h2>
-        <img src="Images/istockphoto-1165295700-612x612.jpg" width="500" height="600">
+        <img src="Images/istockphoto-1165295700-612x612.jpg" width="1000" height="300"
   <p>We are creating a website on chemistry, in groups we got given a element to make a website on.
       The element that we got given is Yttrium.</p>
     
