--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head><title>Chemistry Website</title></head>
   <style>
-    <marquee width="120%" direction="up" height="200px">
+    <marquee width="120%" direction="right" height="200px">
 Information About Yttrium
 </marquee>
     
