--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
  
     <marquee width="60%" direction="right" height="100px">
 Information About Yttrium
-</marquee>
-    
+  </marquee>
+<marquee behavior="scroll" direction="right" scrollamount="12">Information About Yttrium</marquee>
     
 
   <body>
