--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <marquee width="60%" direction="right" height="100px">
 Information About Yttrium
   </marquee>
-<marquee behavior="scroll" direction="right" scrollamount="12">Information About Yttrium</marquee>
+<marquee width="100%" height="100px" direction="right" scrollamount="12">Information About Yttrium</marquee>
     
 
   <body>
