--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <html>
   <head><title>Chemistry Website</title></head>
  
-    <marquee width="60%" direction="right" height="100px">
-Information About Yttrium
-  </marquee>
+ 
 <marquee width="100%" height="100px" direction="right" scrollamount="12">Information About Yttrium</marquee>
     
 
@@ -11,6 +9,8 @@ Information About Yttrium
     <h1>Chemistry Homepage<h2>
         <img src="Images/istockphoto-1165295700-612x612.jpg" width="300" height="300"
              <br>
+      <marquee width="100%" height="100px" direction="right" scrollamount="12">Information About Yttrium</marquee>
+      <br>
   <p>We are creating a website on chemistry, in groups we got given a element to make a website on.
       The element that we got given is Yttrium.</p>
     
