--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     
 
   <body>
-    <h1>Chemistry Homepage<h2>
+    <h1><marquee width="100%" height="100px" direction="right" scrollamount="12">Information About Yttrium</marquee> <h2>
         <img src="Images/istockphoto-1165295700-612x612.jpg" width="300" height="300"
-             <br>
-      <marquee width="100%" height="100px" direction="right" scrollamount="12">Information About Yttrium</marquee>
       <br>
   <p>We are creating a website on chemistry, in groups we got given a element to make a website on.
       The element that we got given is Yttrium.</p>
