--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
 				<div id="footerblurb-inner">
 				
 					<div class="column">
-						<h2><span>Heading</span></h2>
+						<h2><span>Elements</span></h2>
 						<p><script>generateText(2)</script></p>
 					</div>	
 					<div class="column">
-						<h2><span>Heading</span></h2>
+						<h2><span>Banner</span></h2>
 						<p><script>generateText(2)</script></p>
 					</div>
 					<div class="column">
-						<h2><span>Heading</span></h2>
+						<h2><span>Information On Yttrium</span></h2>
 						<p><script>generateText(2)</script></p>
 					</div>	
 					
