--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
 				
 					<main id="contentbar">
 						<div class="article">
+							<p> Elements </p>
 							<p><ul style="list-style-type:square">
-	         <li><a href="Elements/Aluminium.html">Aluminium</a></li><br>
+	         <li><a href="Elements/Aluminium.html">Aluminium</a></li>
 	         <li><a href="Elements/Arsenic.html">Arsenic</a></li>
 	         <li><a href="Elements/Chlorine.html">Chlorine</a></li>
 	         <li><a href="Elements/Gold.html">Gold</a></li>
