--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						<br>
 						<br>
 						<h2> Banner </h2>
-						<a href="Images/istockphoto-1165295700-612x612.jpg"
+						<a href="https://www.istockphoto.com/vector/laboratory-beaker-icon-chemical-experiment-in-flask-%D1%81hemistry-and-biology-symbol-gm1165295700-320593493"
 		<img src="Images/istockphoto-1165295700-612x612.jpg" src="https://www.istockphoto.com/vector/laboratory-beaker-icon-chemical-experiment-in-flask-%D1%81hemistry-and-biology-symbol-gm1165295700-320593493" width="300" height="300"
 
 						
