--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 						<br>
 						<br>
 						<h2> Banner </h2>
-						<a href="https://www.istockphoto.com/photos/chemistry-class"
-		<img src="Images/istockphoto-1165295700-612x612.jpg" src="https://www.istockphoto.com/photos/chemistry-class" width="300" height="300"
+						<a href="https://www.istockphoto.com/photos/chemistry-class">
+		<img src="Images/istockphoto-1165295700-612x612.jpg" src="https://www.istockphoto.com/photos/chemistry-class" width="300" height="300">
 
 						
 						</div>
