--- a/index.html
+++ b/index.html
@@ -119,8 +119,12 @@
 	         <li><a href="Elements/Yttrium">Yttrium</a><br></li>
 	      </ul></p>
 							
-			<h2> Information </h2>
-			<p> 
+			<h2> Extra Information </h2>
+			<p> Although yttrium can be found in most rare earth minerals, <br>
+				it has never been detected as a free-standing element in the Earth's crust. <br>
+				Yttrium was discovered in lunar rocks collected during the Apollo moon expeditions. <br>
+				Yttrium is found in trace levels in the human body, mostly in the liver, kidneys, and bones.
+							</p>
 						
 						</div>
 					</main>
